--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
+    "moment": "^2.30.1",
     "next": "15.4.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
