--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "next": "15.4.1",
     "postcss": "^8.5.6",
