--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "next": "15.4.1",
@@ -18,6 +21,7 @@
     "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^15.6.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
