handling error added

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.6.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
