--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/resource-timeline": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/error-message": "^2.0.1",
     "@tailwindcss/postcss": "^4.1.11",
